Add some changes to html and css for buttons and javascript to begin delete card

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       </section>
       <section class="idea-card-bottom">
        <div class="voting-btns">
-         <img src="Images/downvote.svg" class="buttons" id="downvote-button">
-          <img src="Images/upvote.svg" class="buttons" id="upvote-button">
+         <input type="image" src="Images/downvote.svg" class="buttons" id="downvote-button">
+         <input type="image" src="Images/upvote.svg" class="buttons" id="upvote-button">
        </div>
         <div class="quality">
           <p id="idea-quality">Quality:</p>
         </div>
         <div class="delete-container">
-          <img src="Images/delete.svg" class="buttons delete-button" id="delete-button">
+          <input type="image" src="Images/delete.svg" class="buttons delete-button" id="delete-button">
         </div>
       </section>
     </article>
@@ -61,14 +61,14 @@
     <p id="idea-body">${body}</p>
     <section class="idea-card-bottom">
       <div class="voting-btns">
-        <img src="Images/downvote.svg" class="buttons" id="downvote-button">
-        <img src="Images/upvote.svg" class="buttons" id="upvote-button">
+        <input type="image" src="Images/downvote.svg" class="buttons" id="downvote-button">
+        <input type="image" src="Images/upvote.svg" class="buttons" id="upvote-button">
       </div>
       <div class="quality">
         <p id="idea-quality">Quality:</p>
       </div>
       <div class="delete-container">
-        <img src="Images/delete.svg" class="buttons delete-button" id="delete-button">
+        <input type="image" src="Images/delete.svg" class="buttons delete-button" id="delete-button">
       </div>
     </section>
   </article>
