Add quality Swill to new card

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img src="Images/upvote.svg" class="buttons" id="upvote-button">
       </div>
       <div class="quality">
-        <p id="idea-quality">Quality:</p>
+        <p id="idea-quality"></p>
       </div>
       <div class="delete-container">
         <img src="Images/delete.svg" class="buttons delete-button" id="delete-button">
