--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
   <!-- Idea Card Template -->
   <template id="idea-card-template">
-    <article class="idea-card"  data-id=${id}>
+    <article id="idea-card-js" class="idea-card"  data-id=${id}>
       <h2 id="idea-title">${title}</h2>
       <p id="idea-body">${body}</p>
       <section class="idea-card-bottom">
