Add edit content functionality bt not save to localStorage yet

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <!-- Idea Card Template -->
   <template id="idea-card-template">
     <article id="idea-card-js" class="idea-card"  data-id=${id}>
-      <h2 id="idea-title">${title}</h2>
-      <p id="idea-body">${body}</p>
+      <h2 id="idea-title" contenteditable="true">${title}</h2>
+      <p id="idea-body" contenteditable="true">${body}</p>
       <section class="idea-card-bottom">
         <div class="voting-btns">
           <input type="image" src="Images/downvote.svg" class="buttons" id="downvote-button">
