Add javascript functionality on input and upvote

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <input type="image" src="Images/upvote.svg" class="buttons" id="upvote-button">
         </div>
         <div class="quality">
-          <p id="idea-quality"></p>
+          <p id="idea-quality">Quality: <span id="quality-text"></span></p>
         </div>
         <div class="delete-container">
           <button class="delete-button" id="delete-button"></button>
