Add filter buttons and funtion, still in progress

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
           <button class="save-button" id="save-button">Save</button>
         </form>
       </section>
-      <article class="cards-container"> 
+      <article class="cards-container">
+        <section class="filter-buttons">
+          <button class="filter" id="genius-filter">Genius</button>
+          <button class="filter" id="plausible-filter">Plausible</button>
+          <button class="filter" id="swill-filter">Swill</button>
+        </section>
       </article>
       <div id="idea-card-area">
       </div>
