Added working filter function
Co-authored-by: Joe <johnson.joseph527@gmail.com>
Co-authored-by: another-Bridget <bacoyle0409@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       </section>
       <article class="cards-container">
         <section class="filter-buttons">
+          <button class="filter" id="dumbledore-filter">Dumbledore</button>
           <button class="filter" id="genius-filter">Genius</button>
           <button class="filter" id="plausible-filter">Plausible</button>
           <button class="filter" id="swill-filter">Swill</button>
+          <button class="filter" id="riddikulus-filter">Riddikulus</button>
         </section>
       </article>
       <div id="idea-card-area">
