--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <h4>Title</h4>
           <input type="text" class="title-box" id="title-box">
           <h4>Body</h4>
-          <textarea class="body-box" id="body-box"></textarea>
+          <textarea class="body-box" id="body-box" onkeyup="charCountUpdate(this.value)"></textarea>
+          <p class="character-counter"><span class="character-counter" id="charCounter">0</span>/120</p>
           <br>
           <button class="save-button" id="save-button">Save</button>
         </form>
@@ -53,7 +54,7 @@
           <input type="image" src="Images/upvote.svg" class="buttons" id="upvote-button">
         </div>
         <div class="quality">
-          <p id="idea-quality">Quality: <span id="quality-text"></span></p>
+          <p id="idea-quality">Quality:<span id="quality-text"></span></p>
         </div>
         <div class="delete-container">
           <button class="delete-button" id="delete-button"></button>
