--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <textarea class="body-box" id="body-box" onkeyup="charCountUpdate(this.value)"></textarea>
           <p class="character-counter"><span class="character-counter" id="charCounter">0</span>/120</p>
           <br>
-          <button class="save-button" id="save-button">Save</button>
+          <button class="save-button" id="save-button" disabled>Save</button>
         </form>
       </section>
       <article class="cards-container">
